--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "firebase-tools": "^6.2.2",
     "node-sass": "^4.10.0",
     "pug": "^2.0.3",
