--- a/package.json
+++ b/package.json
@@ -7,6 +7,16 @@
     "build": "vue-cli-service build",
     "test": "jest"
   },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "vue"
+    ],
+    "transform": {
+      ".*\\.(vue)$": "vue-jest"
+    }
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "firebase-tools": "^6.2.2",
@@ -26,6 +36,7 @@
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
     "vue-cli-plugin-vuetify": "^0.4.6",
+    "vue-jest": "^3.0.5",
     "vue-template-compiler": "^2.5.18",
     "vuetify-loader": "^1.0.5"
   }
