test: setup jest

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     ],
     "transform": {
       ".*\\.(vue)$": "vue-jest"
+    },
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
     }
   },
   "dependencies": {
