--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
       "vue"
     ],
     "transform": {
-      ".*\\.(vue)$": "vue-jest"
+      ".*\\.(vue)$": "vue-jest",
+      "^.+\\.js$": "<rootDir>/node_modules/babel-jest"
     },
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
@@ -35,6 +36,7 @@
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-jest": "^24.9.0",
     "jest": "^24.9.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
