test: setup coverage

--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     },
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
-    }
+    },
+    "collectCoverage": true,
+    "collectCoverageFrom": ["**/*.{js,vue}", "!**/node_modules/**"],
+    "coverageReporters": ["html", "text-summary"]
   },
   "dependencies": {
     "axios": "^0.18.0",
