--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,22 @@
 {
-  "presets": [[ "@babel/env", { "modules": false } ]],
+  "presets": [
+    [
+      "@babel/preset-env",
+      { "modules": false }
+    ]
+  ],
   "env": {
     "test": {
-      "presets": [[ "@babel/env", { "targets": { "node": "current" } } ]]
+      "presets": [
+        [
+          "@babel/preset-env",
+          { "targets":
+            { "node":
+              "current"
+            }
+          }
+        ]
+      ]
     }
   }
 }
