--- a/package.json
+++ b/package.json
@@ -36,9 +36,8 @@
     "@vue/cli-plugin-babel": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.29",
-    "babel-core": "^7.0.0-beta.3",
+    "babel-core": "^6.26.3",
     "babel-jest": "^24.9.0",
-    "babel-preset-vue": "^2.0.2",
     "jest": "^24.9.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
