--- a/package.json
+++ b/package.json
@@ -7,6 +7,33 @@
     "build": "vue-cli-service build",
     "test": "jest"
   },
+  "dependencies": {
+    "axios": "^0.18.0",
+    "firebase-tools": "^6.2.2",
+    "node-sass": "^4.10.0",
+    "pug": "^2.0.3",
+    "pug-plain-loader": "^1.0.0",
+    "register-service-worker": "^1.6.2",
+    "sass-loader": "^7.1.0",
+    "vue": "^2.5.18",
+    "vuetify": "^1.3.0",
+    "vuex": "^3.0.1"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "^3.0.5",
+    "@vue/cli-plugin-pwa": "^4.2.3",
+    "@vue/cli-service": "^3.0.5",
+    "@vue/test-utils": "^1.0.0-beta.29",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^24.9.0",
+    "jest": "^24.9.0",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-vuetify": "^0.4.6",
+    "vue-jest": "^3.0.5",
+    "vue-template-compiler": "^2.5.18",
+    "vuetify-loader": "^1.0.5"
+  },
   "jest": {
     "moduleFileExtensions": [
       "js",
@@ -20,30 +47,5 @@
     "moduleNameMapper": {
       "^@/(.*)$": "<rootDir>/src/$1"
     }
-  },
-  "dependencies": {
-    "axios": "^0.18.0",
-    "firebase-tools": "^6.2.2",
-    "node-sass": "^4.10.0",
-    "pug": "^2.0.3",
-    "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^7.1.0",
-    "vue": "^2.5.18",
-    "vuetify": "^1.3.0",
-    "vuex": "^3.0.1"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.5",
-    "@vue/cli-service": "^3.0.5",
-    "@vue/test-utils": "^1.0.0-beta.29",
-    "babel-core": "^6.26.3",
-    "babel-jest": "^24.9.0",
-    "jest": "^24.9.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "vue-cli-plugin-vuetify": "^0.4.6",
-    "vue-jest": "^3.0.5",
-    "vue-template-compiler": "^2.5.18",
-    "vuetify-loader": "^1.0.5"
   }
 }
