--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@vue/test-utils": "^1.0.0-beta.29",
     "babel-core": "^6.26.3",
     "babel-jest": "^24.9.0",
+    "eslint": "^6.8.0",
+    "eslint-plugin-vue": "^6.2.2",
     "jest": "^24.9.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
